--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -1,4 +1,4 @@
-welcome=Welcome to my spring petclinic!!!.. Testing Jenkins
+welcome=Jenkins Training is almost over!!!.. Testing Jenkins
 required=is required
 notFound=has not been found
 duplicate=is already in use
